--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,6 @@ build/
 # .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+# .rvmrc
+# NOTE I'm deliberately ignoring this advice in the interests of transparency,
+#      even though I'm currently using rvm 1.23.13
